[tool.poetry]
name = "met"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
plotly = "^5.14.1"
streamlit = "^1.22.0"
spotipy = "^2.23.0"
flatten-json = "^0.1.13"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
